--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -145,9 +145,8 @@
     />
   </head>
   <body>
-    <div class="hello">
-      <img class="hello__logo" src="../assets/img/logo.svg" alt="WTF " />
-      <span class="hello__circles"></span>
-    </div>
+  <div>
+    <span class="text"></span><span class="cursor">|</span>
+  </div>
   </body>
 </html>
